<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danceculture.imc.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/screen_background_light"
        android:soundEffectsEnabled="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvpress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvpress"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textSize="30sp"
                            android:textStyle="italic" />
                    </LinearLayout>
                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvaltura"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintHorizontal_bias="0.347"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.173" />

                        <EditText
                            android:id="@+id/et1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="numberDecimal"
                            android:textSize="24sp"
                            app:layout_constraintRight_toRightOf="parent"
                            tools:layout_editor_absoluteY="196dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvpeso"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintHorizontal_bias="0.347"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.173" />

                        <EditText
                            android:id="@+id/et2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="numberDecimal"
                            android:textSize="24sp"
                            app:layout_constraintRight_toRightOf="parent"
                            tools:layout_editor_absoluteY="196dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btcalcular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="estimate"
                            android:text="@string/btcalcular" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv008"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/por"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@android:drawable/list_selector_background" />

                <Button
                    android:id="@+id/btacercade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="acercade"
                    android:text="@string/btacercade"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="119dp"
                    tools:layout_editor_absoluteY="458dp" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>
